<resources>
    <string name="app_name">DeWiCam</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>



    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="copy_right">Copyrights %1$d</string>
    <string name="about_page_github_name">6</string>
    <string name="about_page_website_link">https://github.com/6</string>
    <string name="about_page_email_addr">i@zju.edu.cn</string>
    <string name="about_page_app_description">position_to_put_some_description</string>
    <string name="about_page_group_name">Contact us</string>
    <string name="about_page_group_name_version">Version</string>
    <string name="about_page_app_play_store">org.usslab.decam</string>
    <string name="pref_key_str_tcpdumpfiles_folder">pref_key_str_tcpdumpfiles_folder</string>
    <string name="pref_key_str_loggingfiles_folder">pref_key_str_loggingfiles_folder</string>
    <string name="pref_default_listen_channel">pref_default_listen_channel</string>
    <string name="pref_key_algo_1">pref_key_algo_1</string>
    <string name="pref_key_algo_2">pref_key_algo_2</string>
    <string name="pref_key_algo_3">pref_key_algo_3</string>
    <string name="black_mac_list_db_filename">FilterMAC.txt</string>
    <string name="pref_btn_clear_nexmon">pref_btn_clear_nexmon</string>
    <string name="nexmon_app_package_id">de.tu_darmstadt.seemoo.nexmon</string>
    <string name="pref_setting_file_name">org.usslab.decam_preferences</string>
    <string name="pref_switch_dump_packets">pref_switch_dump_packets</string>
    <string name="ui_text_capture">Capture</string>
    <string name="ui_text_speed">Speed</string>
    <string name="ui_text_count">Count</string>
    <string name="ui_btn_resolution">Resolution</string>
    <string name="ui_btn_audio">Audio</string>
    <string name="ui_description_banner">banner</string>
    <string name="ui_description_logo">logo</string>
    <string name="ui_text_norun">NoRun</string>
    <string name="pref_key_algo_seq_len">pref_key_algo_seq_len</string>
</resources>
